Customize the header section on each page to have a drop shadow, padding, and correct position / width / text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,18 @@ Background Color (White): rgba(255,255,255,1);
   box-sizing: border-box;
 }
 
+header
+{
+  background-color: rgba(0,159,253,0.1);
+  text-align: center;
+  padding: 10px 0;
+  position: fixed
+  width: 100%
+  -webkit-box-shadow: 3px 3px 19px 0px rgba(50, 50, 50, 0.45);
+  -moz-box-shadow:    3px 3px 19px 0px rgba(50, 50, 50, 0.45);
+  box-shadow:         3px 3px 19px 0px rgba(50, 50, 50, 0.45);
+}
+
 body
 {
    background-color: #ffffff;
